Fix overflowing table on chrome

--- a/app/assets/stylesheets/list_items.scss
+++ b/app/assets/stylesheets/list_items.scss
@@ -10,6 +10,8 @@ table.table tbody tr {
   td {
     line-height: 85%;
     font-size: 85%;
+    word-wrap:break-word;
+    word-break:break-all;
   }
 }
 
